# rhce-study

./: .gitignore  CURRICULUM.md  EXAMINER.md  LAB-REFERENCE.md  README.md  RHCE-Study-Guide.md  Vagrantfile
.vagrant/bundler/: global.sol
Mac/: SETUP.md  Vagrantfile  Vagrantfile.bak
ansible/: inventory  pyproject.toml
ansible/exam_setup/: greg.yml
ansible/examiner/: __init__.py  __main__.py  app.py  app.tcss  exporter.py  loader.py  models.py
ansible/examiner/exams/: bonus_exam.yml  exam1.yml  exam2.yml  exam3.yml  lesson01_configuration.yml  lesson02_getting_started.yml  lesson03_first_playbook.yml  lesson04_files_and_packages.yml  lesson05_variables_and_facts.yml  lesson06_conditionals_and_loops.yml  lesson07_templates_and_handlers.yml  lesson08_users_groups_services.yml  lesson09_roles.yml  lesson10_vault.yml  lesson11_collections_and_system_roles.yml  lesson12_exam_readiness.yml  lesson13_advanced_vault.yml  lesson14_additional_system_roles.yml  lesson15_jinja2_templates.yml  lesson16_user_accounts.yml  lesson17_lvm_storage.yml  lesson18_repos_and_yum.yml  lesson19_galaxy_roles.yml  lesson20_webcontent_selinux.yml
ansible/examiner/solutions/: bonus_exam_solutions.md  exam1_solutions.md  exam2_solutions.md  exam3_solutions.md
ansible/examiner/verification/: __init__.py  runner.py  ssh.py
ansible/examiner/widgets/: __init__.py  task_detail.py  task_list.py  timer.py
homelab_playbooks/: ansible.cfg  apt.yml  inventory
playbooks/: ansible_user.yml  array.yml  container_start.yaml  facts.yml  loop.yml  nginx_setup.yaml  vars.yaml
(+21 files in other folders)
